--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Clase 3 JavaScript para html5</title>
-    <script src="clase3Javascripthtml5.js">
+    <script src="index.js">
 
     </script>
 </head>
