--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     </script>
 </head>
 <body>
-    <h1>Clase 3 JavaScript para html5</h1>
+    <h1>Prueba libreria</h1>
     <h2>Formulario</h2>
     <div id="contenido"></div>
 </body>
